players can see when they're robots are spawning; fixed robot z-order to appear in front of flags but behind explosion effects moved powered down box to the cards component

--- a/app/globals.css
+++ b/app/globals.css
@@ -131,3 +131,15 @@ body {
     opacity: 0;
   }
 }
+
+@keyframes fadeUp {
+  0% {
+    opacity: 1;
+    transform: translateX(-50%) translateY(0);
+  }
+  
+  100% {
+    opacity: 0;
+    transform: translateX(-50%) translateY(-30px);
+  }
+}
